// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tables Table (full) 1`] = `
.c2 {
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  height: 100%;
  width: 100%;
  background-color: rgb(255,255,255);
}

.c3 {
  display: grid;
  width: 100%;
  border-bottom: 1px solid rgb(230,230,230);
}

.c16 {
  display: grid;
  overflow-y: auto;
  overflow-x: hidden;
  padding-bottom: 8px;
  position: relative;
  z-index: 0;
}

.c15 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 13px;
  line-height: 22px;
}

.c10 {
  position: absolute;
  top: 3px;
  left: 3px;
  height: 18px;
  width: 18px;
  border-radius: 2px;
  -webkit-transition: -webkit-transform 100ms;
  -webkit-transition: transform 100ms;
  transition: transform 100ms;
  pointer-events: none;
}

.c8 {
  position: relative;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 24px;
  height: 24px;
}

.c8:hover .c9 {
  background-color: rgba(103,58,183,0.16);
  -webkit-transform: scale(1.77);
  -ms-transform: scale(1.77);
  transform: scale(1.77);
}

.c8:focus-within {
  outline: none;
}

.c8:focus-within .c9 {
  background-color: rgba(103,58,183,0.16);
  -webkit-transform: scale(1.77);
  -ms-transform: scale(1.77);
  transform: scale(1.77);
}

.c8:active .c9 {
  background-color: rgba(103,58,183,0.24);
  -webkit-transform: scale(1.88);
  -ms-transform: scale(1.88);
  transform: scale(1.88);
}

.c13 {
  position: absolute;
  top: 0;
  left: 0;
  cursor: pointer;
  display: unset;
  margin: 0;
  padding: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
}

.c11 {
  width: 18px;
  height: 18px;
  border-radius: 2px;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  pointer-events: none;
  position: absolute;
}

.c12 {
  background-color: rgb(103,58,183);
}

.c12::after {
  content: '';
  width: 5px;
  height: 10px;
  border: solid #fff;
  border-width: 0 2px 2px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  margin-bottom: 3px;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 {
  color: rgb(61,61,61);
  background: rgb(255,255,255);
  text-align: left;
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:not:last-child {
  resize: horizontal;
}

.c7 {
  padding-right: 24px;
  grid-column: start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: visible;
}

.c14 {
  z-index: 1;
  grid-column-start: content-start;
  grid-column-end: end;
  color: rgb(69,39,160);
}

.c4 {
  display: grid;
  grid-template-rows: 48px;
}

.c18 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c17 {
  position: absolute;
  z-index: 1;
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-3"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            style={
              Object {
                "gridTemplateColumns": "24px [start] 48px [content-start] 2px 1px 2px [content-end] 40px [scroll] 12px [end]",
              }
            }
          >
            <div
              className="c5 c6 c7"
            >
              <div
                checked={true}
                className="c8"
                disabled={false}
              >
                <div
                  className="c9 c10"
                />
                <div
                  className="c11 c12"
                />
                <input
                  checked={true}
                  className="c13"
                  disabled={false}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onPointerDown={[Function]}
                  onPointerUp={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="c5 c14"
            >
              <div>
                <p
                  className="c15"
                >
                  Actions overlay
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          className="c16"
          style={
            Object {
              "maxHeight": "336px",
              "width": "129px",
            }
          }
          width={129}
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="c17"
      id="layer-4"
    >
      <div
        className="c18"
      />
    </div>
  </div>
</div>
`;

exports[`Tables Table (minimal) 1`] = `
.c2 {
  overflow-x: auto;
  overflow-y: hidden;
  position: relative;
  height: 100%;
  width: 100%;
  background-color: rgb(255,255,255);
}

.c3 {
  display: grid;
  width: 100%;
  border-bottom: 1px solid rgb(230,230,230);
}

.c10 {
  display: grid;
  overflow-y: auto;
  overflow-x: hidden;
  padding-bottom: 8px;
  position: relative;
  z-index: 0;
}

.c8 {
  font-family: Open Sans,Helvetica,arial,sans-serif;
  font-size: 13px;
  line-height: 22px;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 12px;
  font-weight: 400;
  line-height: 17px;
  white-space: nowrap;
}

.c5 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: left;
  -webkit-justify-content: left;
  -ms-flex-pack: left;
  justify-content: left;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.c6 {
  color: rgb(61,61,61);
  background: rgb(255,255,255);
  text-align: left;
  font-weight: 400;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6:not:last-child {
  resize: horizontal;
}

.c7 {
  padding-right: 16px;
}

.c7:first-child {
  grid-column: content-start;
}

.c9 {
  text-transform: none;
}

.c4 {
  display: grid;
  grid-template-rows: 48px;
}

.c12 {
  position: fixed;
  top: 0;
  width: 360px;
  border-radius: 4px;
  margin: 8px 16px;
  right: 0;
}

.c0 {
  color: rgb(41,41,41);
}

.c1 {
  position: absolute;
  z-index: 0;
}

.c11 {
  position: absolute;
  z-index: 1;
}

<div
  className="c0"
  id="practical-root"
>
  <div>
    <div
      className="c1"
      id="layer-1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
            style={
              Object {
                "gridTemplateColumns": "24px [start] 0px [content-start] 64px 64px 64px [content-end] 0px [scroll] 12px [end]",
              }
            }
          >
            <div
              className="c5 c6 c7"
            >
              <p
                className="c8 c9"
              >
                Serial number
              </p>
            </div>
            <div
              className="c5 c6 c7"
            >
              <p
                className="c8 c9"
              >
                Name
              </p>
            </div>
            <div
              className="c5 c6 c7"
            >
              <p
                className="c8 c9"
              >
                IP address
              </p>
            </div>
          </div>
        </div>
        <div
          className="c10"
          style={
            Object {
              "maxHeight": "336px",
              "width": "228px",
            }
          }
          width={228}
        />
      </div>
    </div>
  </div>
  <div>
    <div
      className="c11"
      id="layer-2"
    >
      <div
        className="c12"
      />
    </div>
  </div>
</div>
`;
